--- a/ranger3.html
+++ b/ranger3.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Three: Evil Boss Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Three: Evil Boss Ranger</h1></th></tr>
 		<tr>
 			<th>Revisiting The Evil</th>
 			<th>Preparations</th>
@@ -129,16 +129,16 @@
 		</tr>
 		<tr>
 			<td><img id="nota" src="Nightmare_Pickaxe.webp" alt="Nightmare_Pickaxe"><img id="nota" src="Deathbringer_Pickaxe.webp" alt="Deathbringer_Pickaxe"><p class="nota">Nightmare/Deathbringer Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Shadow_armor.webp" alt="Shadow_armor"><img id="nota" src="Crimson_armor.webp" alt="Crimson_armor"><p class="nota">Shadow/Crimson Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Light's_Bane" target="_blank">Light's Bane</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Necro_armor.webp" alt="Necro Armor"><p class="nota">Necro Armor</p><input class="nota" type="checkbox"></td>				
+			<td><img id="nota" src="Minishark.webp" alt="Minishark"><p class="nota">Minishark</p><input class="nota" type="checkbox"></td>				
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
 			<td><p>12x Demonite/Crimtane Bar</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"><img id="nota" src="Crimtane_Bar.webp" alt="Crimtane"><br><p>6x Shadow Scales/Tissue Samples</p><img id="nota" src="Shadow_Scale.webp" alt="Shadow_Scale"><img id="nota" src="Tissue_Sample.webp" alt="Tissue_Sample"></td>
-			<td><p>60x Demonite/Crimtane Bar</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"><img id="nota" src="Crimtane_Bar.webp" alt="Crimtane"><br><p>45x Shadow Scales/Tissue Samples</p><img id="nota" src="Shadow_Scale.webp" alt="Shadow_Scale"><img id="nota" src="Tissue_Sample.webp" alt="Tissue_Sample"></td>
-			<td><p>10x Demonite</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"></td>
+			<td><p>135x Cobwebs</p><img id="nota" src="Cobweb.webp" alt="Cobweb"><br><p>150x Bones</p><img id="nota" src="Bone.webp" alt="Bone"></td>
+			<th><p>Bought from Arms Dealer</p></th>
 		</tr>				
 	</table>
 	<table>
