--- a/ranger4.html
+++ b/ranger4.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Four: Skeletron and the Underworld Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Four: Skeletron and the Underworld Ranger</h1></th></tr>
 		<tr>
 			<th>The Deep End</th>
 			<th>It isn't a Castle</th>
@@ -129,16 +129,12 @@
 		</tr>
 		<tr>
 			<td><img id="nota" src="Molten_Pickaxe.webp" alt="Molten_Pickaxe"><p>Molten Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Molten_armor.webp" alt="Molten_armor"><p>Molten Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Volcano.png" alt="Volcano"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Volcano" target="_blank">Volcano</a></p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Obsidian_Skull.webp" alt="Obsidian_Skull"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Obsidian_Skull" target="_blank">Obsidian Skull</a></p><input class="nota" type="checkbox"></td>	
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>20x Hellstone Bar</p><img id="nota" src="Hellstone_Bar.png" alt="hellstone"></td>
-			<td><p>45x Hellstone Bar</p><img id="nota" src="Hellstone_Bar.png" alt="hellstone"></td>
 			<td><p>20x Hellstone Bar</p><img id="nota" src="Hellstone_Bar.png" alt="hellstone"></td>
 			<td><p>20x Obsidian</p><img id="nota" src="Obsidian.webp" alt="obsidian"></td>
 		</tr>				
