--- a/ranger6.html
+++ b/ranger6.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Six: Pre-Boss Hardmode Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Six: Pre-Boss Hardmode Ranger</h1></th></tr>
 		<tr>
 			<th>Back to the Beginning</th>
 			<th>Re-exploration</th>
@@ -130,7 +130,7 @@
 		<tr>
 			<td><img id="nota" src="Titanium_Drill.webp" alt="Titanium_Drill"><img id="nota" src="Adamantite_Drill.webp" alt="Adamantite_Drill"><p class="nota">Titanium/Adamantite Drill</p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Titanium_armor.webp" alt="Titanium_armor"><img id="nota" src="Adamantite_armor.webp" alt="Adamantite_armor"><p class="nota">Titanium/Adamantite Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Titanium_Sword.webp" alt="Titanium_Sword"><img id="nota" src="Adamantite_Sword.webp" alt="Adamantite_Sword"><p class="nota">Titanium/Adamantite Sword</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Titanium_Repeater.webp" alt="Titanium_Repeater"><img id="nota" src="Adamantite_Repeater.webp" alt="Adamantite_Repeater"><p class="nota">Titanium/Adamantite Repeater</p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Pwnhammer.webp" alt="Pwnhammer"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Pwnhammer" target="_blank">Pwnhammer</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
@@ -139,7 +139,7 @@
 		<tr>
 			<td><p>18x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
 			<td><p>78x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
-			<td><p>12x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
+			<td><p>13x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
 			<td ><p>Dropped by Wall of Flesh</p><img id="nota" src="Map_Icon_Wall_of_Flesh.webp" alt="Wall_of_Flesh"></td>
 		</tr>				
 	</table>
