--- a/ranger7.html
+++ b/ranger7.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Seven: Queen Slime Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Seven: Queen Slime Ranger</h1></th></tr>
 		<tr>
 			<th>Boss Prep... Again...</th>
 			<th>Take to the Sky</th>
