--- a/ranger2.html
+++ b/ranger2.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Two: Eye of Cthulhu Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Two: Eye of Cthulhu Ranger</h1></th></tr>
 		<tr>
 			<th>Demonic Purge</th>
 			<th>The Evil of the World</th>
@@ -128,14 +128,14 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Light's_Bane" target="_blank">Light's Bane</a></p><input class="nota" type="checkbox"></td>			
+			<td><p>None</p></td>
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Demonite</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"></td>
-		</tr>				
+			<td><p>None</p></td>
+		</tr>			
 	</table>
 	<table>
 		<tr>
