--- a/mage10.html
+++ b/mage10.html
@@ -114,7 +114,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Ten: Finale Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Ten: Finale Mage</h1></th></tr>
 		<tr>
 			<th>Back to the Dungeon</th>
 			<th>Boss Fight #11</th>
@@ -137,17 +137,17 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Solar_Flare_armor.png" alt="Solar_Flare_armor"><img id="nota" src="Solar_Flare_armor.png" alt="Solar_Flare_armor"><p class="nota">Solar Flare Armor</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Daybreak.png" alt="Daybreak"><p class="nota">Daybreak</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Solar_Eruption.webp" alt="Solar_Eruption"><p class="nota">Solar Eruption</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Nebula_armor.png" alt="Nebula_armor"><img id="nota" src="Nebula_armor.png" alt="Nebula_armor"><p class="nota">Nebula Armor</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Nebula_Arcanum.png" alt="Nebula_Arcanum"><p class="nota">Nebula Arcanum</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Nebula_Blaze.webp" alt="Nebula_Blaze"><p class="nota">Nebula Blaze</p><input class="nota" type="checkbox"></td>	
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>45x Solar Fragments</p><img id="nota" src="Solar_Fragment.png" alt="Solar Fragment"><br><p>36x Luminite Bars</p><img id="nota" src="Luminite_Bar.webp" alt="Luminite Bar"></td>
-			<td><p>18x Solar Fragments</p><img id="nota" src="Solar_Fragment.png" alt="Solar Fragment"></td>
-			<td><p>18x Solar Fragments</p><img id="nota" src="Solar_Fragment.png" alt="Solar Fragment"></td>
+			<td><p>45x Nebula Fragments</p><img id="nota" src="Nebula_Fragment.webp" alt="Nebula Fragment"><br><p>36x Luminite Bars</p><img id="nota" src="Luminite_Bar.webp" alt="Luminite Bar"></td>
+			<td><p>18x Nebula Fragments</p><img id="nota" src="Nebula_Fragment.webp" alt="Nebula Fragment"></td>
+			<td><p>18x Nebula Fragments</p><img id="nota" src="Nebula_Fragment.webp" alt="Nebula Fragment"></td>
 		</tr>				
 	</table>
 	<table>
