--- a/mage5.html
+++ b/mage5.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Five: The Wall of Flesh Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Five: The Wall of Flesh Mage</h1></th></tr>
 		<tr>
 			<th>Long Preparations</th>
 			<th>Boss Fight #4</th>
@@ -126,13 +126,13 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Night's_Edge.webp" alt="Night's_Edge"><p>Night's Edge</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Flamelash.webp" alt="Flamelash"><p>Flamelash</p><input class="nota" type="checkbox"></td>
 		</tr>
 		<tr>
-			<th colspan="6"><h2>Crafting</h2></th>
+			<th colspan="6"><h2>Crafting/Obtainment</h2></th>
 		</tr>
 		<tr>
-			<td><p>Volcano</p><img id="nota" src="Volcano.png" alt="Volcano"><p>Muramasa</p><img id="nota" src="Muramasa.webp" alt="Muramasa"><br><p>Blade Of Grass</p><img id="nota" src="Blade_of_Grass.webp" alt="Blade_of_Grass"><p>Light's Bane</p><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"></td>
+			<td><p>Found in Shadow Chests in the Underworld</p></td>
 		</tr>
 	</table>
 	<table>
