--- a/mage7.html
+++ b/mage7.html
@@ -109,15 +109,15 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Seven: Queen Slime Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Seven: Queen Slime Mage</h1></th></tr>
 		<tr>
 			<th>Boss Prep... Again...</th>
 			<th>Take to the Sky</th>
 			<th>Boss Fight #5</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>You don't need to do much prep for this, all I'd reccomend doing is setting up an arena like the one you did before, only this time do it in the new Hallow Biome.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>This is part of your prep, but next id reccomend getting <a href="https://terraria.wiki.gg/wiki/Wings" target="_blank">Wings.</a>. This will help you drastically in this next fight, so take it as you will.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="Boss_arena.png" alt="Night"><p>You don't need to do much prep for this, all I'd reccomend doing is setting up an arena like the one you did before, only this time do it in the new Hallow Biome.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="wings.png" alt="Corruption"><p>This is part of your prep, but next id reccomend getting <a href="https://terraria.wiki.gg/wiki/Wings" target="_blank">Wings.</a>. This will help you drastically in this next fight, so take it as you will.</p><input type="checkbox"></td>
 			<td><img id="checklist" src="QueenSlimeFight.jpg" alt="Boss_Fight"><p>Your next fight is against the Queen Slime. This is a very easy fight, but it can be a bit tricky if you don't know what to do. The Queen Slime will spawn a lot of smaller projectiles and slimes, which is partially why the wings will be helpful.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
