--- a/mage9.html
+++ b/mage9.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Nine: Plantera and Golem Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Nine: Plantera and Golem Mage</h1></th></tr>
 		<tr>
 			<th>Looming Evils in the Jungle</th>
 			<th>Boss Fight #9</th>
@@ -134,7 +134,8 @@
 		<tr>
 			<td><img id="nota" src="Chlorophyte_Drill.webp" alt="Chlorophyte_Drill"><p class="nota">Chlorophyte Drill</p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Chlorophyte_armor.webp" alt="Chlorophyte_armor"><p class="nota">Chlorophyte Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="True_Excalibur.webp" alt="True_Excalibur"><p class="nota"><a href="https://terraria.wiki.gg/wiki/True_Excalibur" target="_blank">True Excalibur</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Venom_Staff.webp" alt="Venom_Staff"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Venom_Staff" target="_blank">Venom Staff</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Leaf_Blower.webp" alt="Leaf Blower"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Leaf_Blower" target="_blank">Leaf Blower</a></p><input class="nota" type="checkbox"></td>					
 			<td><img id="nota" src="Picksaw.webp" alt="Picksaw"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Picksaw" target="_blank">Picksaw</a></p><input class="nota" type="checkbox"></td>					
 		</tr>
 		<tr>
@@ -143,7 +144,8 @@
 		<tr>
 			<td><p>18x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
 			<td><p>78x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
-			<td><p>Excalibur</p><img id="nota" src="Excalibur.webp" alt="Excalibur"><p>24x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
+			<td><p>Poison Staff</p><img id="nota" src="Poison_Staff.webp" alt="Poison Staff"><p>14x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
+			<td ><p>Dropped by Plantera</p><img id="nota" src="Map_Icon_Plantera_(first_form).webp" alt="Plantera"></td>
 			<td ><p>Dropped by Golem</p><img id="nota" src="Map_Icon_Golem.webp" alt="Golem"></td>
 		</tr>				
 	</table>
