--- a/ranger9.html
+++ b/ranger9.html
@@ -133,16 +133,16 @@
 		</tr>
 		<tr>
 			<td><img id="nota" src="Chlorophyte_Drill.webp" alt="Chlorophyte_Drill"><p class="nota">Chlorophyte Drill</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Chlorophyte_armor.webp" alt="Chlorophyte_armor"><p class="nota">Chlorophyte Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Shroomite_armor.png" alt="Shroomite_armor"><p class="nota">Shroomite Armor</p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Venus_Magnum.webp" alt="Venus Magnum"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Venus_Magnum" target="_blank">Venus Magnum</a></p><input class="nota" type="checkbox"></td>			
 			<td><img id="nota" src="Picksaw.webp" alt="Picksaw"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Picksaw" target="_blank">Picksaw</a></p><input class="nota" type="checkbox"></td>					
 		</tr>
 		<tr>
-			<th colspan="6"><h2>Crafting</h2></th>
+			<th colspan="6"><h2>Crafting/Obtainment</h2></th>
 		</tr>
 		<tr>
 			<td><p>18x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
-			<td><p>78x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
+			<td><p>54x Shroomite Bar</p><img id="nota" src="Shroomite_Bar.webp" alt="shroomite bar"></td>
 			<td><p>Dropped from Plantera</p><img id="nota" src="Map_Icon_Plantera_(first_form).webp" alt="Plantera"></td>
 			<td ><p>Dropped by Golem</p><img id="nota" src="Map_Icon_Golem.webp" alt="Golem"></td>
 		</tr>				
