--- a/summon6.html
+++ b/summon6.html
@@ -129,7 +129,7 @@
 		</tr>
 		<tr>
 			<td><img id="nota" src="Titanium_Drill.webp" alt="Titanium_Drill"><img id="nota" src="Adamantite_Drill.webp" alt="Adamantite_Drill"><p class="nota">Titanium/Adamantite Drill</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Titanium_armor.webp" alt="Titanium_armor"><img id="nota" src="Adamantite_armor.webp" alt="Adamantite_armor"><p class="nota">Titanium/Adamantite Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Forbidden_armor.webp" alt="Forbidden_armor"><p>Forbidden Armor</p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Pwnhammer.webp" alt="Pwnhammer"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Pwnhammer" target="_blank">Pwnhammer</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
@@ -137,7 +137,7 @@
 		</tr>
 		<tr>
 			<td><p>18x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
-			<td><p>78x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
+			<td><p>46x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"><p>3x Forbidden Fragment</p><img id="nota" src="Forbidden_Fragment.webp" alt="Forbidden_Fragment"></td>
 			<td ><p>Dropped by Wall of Flesh</p><img id="nota" src="Map_Icon_Wall_of_Flesh.webp" alt="Wall_of_Flesh"></td>
 		</tr>				
 	</table>
