--- a/summon8.html
+++ b/summon8.html
@@ -129,12 +129,12 @@
 		</tr>
 		<tr>
 			<td><img id="nota" src="Drax.webp" alt="Drax"><p class="nota">Drax</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Hallowed_armor.webp" alt="Hallowed_armor"><img id="nota"></p>Hallowed Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Ancient_Hallowed_armor.webp" alt="Hallowed_armor"><img id="nota"></p>Ancient Hallowed Armor</p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Durendal.webp" alt="Durendal"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Durendal" target="_blank">Durendal</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Life_Fruit.webp" alt="Life Fruit"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Life_Fruit" target="_blank">20x Life Fruit</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
-			<th colspan="6"><h2>Crafting</h2></th>
+			<th colspan="6"><h2>Crafting/Obtainment</h2></th>
 		</tr>
 		<tr>
 			<td><p>18x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"><p>Soul of Sight</p><img id="nota" src="Soul_of_Sight.gif" alt="Soul of Sight"><p>Soul of Might</p><img id="nota" src="Soul_of_Might.gif" alt="Soul of Might"><p>Soul of Fright</p><img id="nota" src="Soul_of_Fright.gif" alt="Soul of Fright"></td>
