--- a/mage6.html
+++ b/mage6.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Six: Pre-Boss Hardmode Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Six: Pre-Boss Hardmode Mage</h1></th></tr>
 		<tr>
 			<th>Back to the Beginning</th>
 			<th>Re-exploration</th>
@@ -130,17 +130,17 @@
 		<tr>
 			<td><img id="nota" src="Titanium_Drill.webp" alt="Titanium_Drill"><img id="nota" src="Adamantite_Drill.webp" alt="Adamantite_Drill"><p class="nota">Titanium/Adamantite Drill</p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Titanium_armor.webp" alt="Titanium_armor"><img id="nota" src="Adamantite_armor.webp" alt="Adamantite_armor"><p class="nota">Titanium/Adamantite Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Titanium_Sword.webp" alt="Titanium_Sword"><img id="nota" src="Adamantite_Sword.webp" alt="Adamantite_Sword"><p class="nota">Titanium/Adamantite Sword</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Laser_Rifle.webp" alt="Laser_Rifle"><p>Laser Rifle</p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Pwnhammer.webp" alt="Pwnhammer"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Pwnhammer" target="_blank">Pwnhammer</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
-			<th colspan="6"><h2>Crafting</h2></th>
+			<th colspan="6"><h2>Crafting/Obtainment</h2></th>
 		</tr>
 		<tr>
 			<td><p>18x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
 			<td><p>78x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
-			<td><p>12x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
-			<td ><p>Dropped by Wall of Flesh</p><img id="nota" src="Map_Icon_Wall_of_Flesh.webp" alt="Wall_of_Flesh"></td>
+			<td><p>Dropped by Wall of Flesh</p><img id="nota" src="Map_Icon_Wall_of_Flesh.webp" alt="Wall_of_Flesh"></td>
+			<td><p>Dropped by Wall of Flesh</p><img id="nota" src="Map_Icon_Wall_of_Flesh.webp" alt="Wall_of_Flesh"></td>
 		</tr>				
 	</table>
 	<table>
@@ -164,7 +164,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><p>None</p></td>
+			<td><img id="npc" src="Map_Icon_Wizard.webp" alt="Wizard"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Wizard" target="_blank">Wizard</a></p><input class="nota" type="checkbox"></td>	
 		</tr>
 	</table>	
 	<table>
