--- a/mage8.html
+++ b/mage8.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Eight: Mech Bosses Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Eight: Mech Bosses Mage</h1></th></tr>
 		<tr>
 			<th>Boss Fight #6</th>
 			<th>Boss Fight #7</th>
@@ -130,7 +130,7 @@
 		<tr>
 			<td><img id="nota" src="Drax.webp" alt="Drax"><p class="nota">Drax</p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Hallowed_armor.webp" alt="Hallowed_armor"><img id="nota"></p>Hallowed Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Excalibur.webp" alt="Excalibur"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Excalibur" target="_blank">Excalibur</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Poison_Staff.webp" alt="Poison Staff"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Poison_Staff" target="_blank">Poison Staff</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Life_Fruit.webp" alt="Life Fruit"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Life_Fruit" target="_blank">20x Life Fruit</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
@@ -139,7 +139,7 @@
 		<tr>
 			<td><p>18x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"><p>Soul of Sight</p><img id="nota" src="Soul_of_Sight.gif" alt="Soul of Sight"><p>Soul of Might</p><img id="nota" src="Soul_of_Might.gif" alt="Soul of Might"><p>Soul of Fright</p><img id="nota" src="Soul_of_Fright.gif" alt="Soul of Fright"></td>
 			<td><p>54x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"></td>
-			<td><p>12x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"></td>
+			<td><p>Dropped by <a href="https://terraria.wiki.gg/wiki/Black_Recluse" target="_blank">Black Recluse</a></p><img id="nota" src="Black_Recluse_(ground).gif" alt="Black Recluse"></td>
 			<td><p>Obtainable after defeating any Mech Boss,<br>found in the underground jungle.</p></td>
 		</tr>				
 	</table>
